potentially fixed problems with invisible icons re #46

--- a/assets/stylesheets/todos.less
+++ b/assets/stylesheets/todos.less
@@ -2,7 +2,7 @@
   width: 31px;
   display: inline-block;
   text-indent: -10000px;
-  background: url(../images/indicator.gif) center center no-repeat #fff !important;
+  background: data-uri('../images/indicator.gif') center center no-repeat #fff !important;
 }
 
 .border-box() {
@@ -73,7 +73,7 @@ todo-resource-edit-form {
   display: inline-block;
   width: 12px;
   height: 14px;
-  background: url(../images/padlock-closed.png);
+  background: data-uri('../images/padlock-closed.png');
   cursor: pointer;
 
   &.widget {
@@ -283,7 +283,7 @@ due-assignee-pill {
               position: relative;
               top: -1px;
               display: inline-block;
-              background: url(../images/delete.png) 0 0 no-repeat;
+              background: data-uri('../images/delete.png') 0 0 no-repeat;
               width: 16px;
               height: 16px;
               text-indent: -20000px;
